vagrant/test/common/cassandra.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: cassandracql
spec:
  type: NodePort
  selector:
    cassandra.datastax.com/cluster: k8ssandra
  ports:
    - port: 9042
      targetPort: 9042
      nodePort: 31111
      protocol: TCP
